--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="fighter1Box">
       <img id="box1" src="https://media.discordapp.net/attachments/270670857444130816/813142918365184011/man-portrait-silhouette.png?width=542&height=701" alt="">
     </div>
+    <div class="or">OR</div>
     <div class="fighter2Box">
       <img id="box2" src="https://media.discordapp.net/attachments/270670857444130816/813142918365184011/man-portrait-silhouette.png?width=542&height=701" alt="">
     </div>
