Add viewport info to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Bias Sorter</title>
   <meta name="description" content="Bias Sorter">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Джон Ниевес, Девид Арригони">
 
   <link rel="stylesheet" href="css/styles.css">
